--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "prepare": "lerna run prepare",
     "rebuild:browser": "theia rebuild:browser",
-    "watch": "lerna run --parallel watch"
+    "watch": "lerna run --parallel watch",
+    "publish": "yarn && yarn publish:latest",
+    "publish:latest": "lerna publish",
+    "publish:next": "lerna publish --exact --canary=next --npm-tag=next --yes"
   },
   "devDependencies": {
     "lerna": "^3.13.0"
