--- a/web/coffee-editor-extension/package.json
+++ b/web/coffee-editor-extension/package.json
@@ -3,19 +3,19 @@
   "keywords": [
     "theia-extension"
   ],
-  "version": "1.0.0",
+  "version": "0.0.1",
   "files": [
     "lib",
     "src"
   ],
   "dependencies": {
     "@jsonforms/core": "2.3.0",
-    "@jsonforms/react": "2.3.0",
     "@jsonforms/material-renderers": "2.3.0",
     "@jsonforms/material-tree-renderer": "2.3.0",
-    "@modelserver/theia": "next",
+    "@jsonforms/react": "2.3.0",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "@modelserver/theia": "next",
     "@theia/core": "0.7.1",
     "@theia/filesystem": "0.7.1",
     "@theia/workspace": "0.7.1",
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "rimraf": "latest",
-    "typescript": "latest",
-    "tslint": "^5.5.0"
+    "tslint": "^5.5.0",
+    "typescript": "latest"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
