--- a/web/browser-app/package.json
+++ b/web/browser-app/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "name": "browser-app",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "dependencies": {
+    "@glsp-examples/workflow-modelserver-theia": "next",
     "@theia/core": "0.7.1",
     "@theia/debug": "0.7.1",
     "@theia/editor": "0.7.1",
@@ -16,19 +17,18 @@
     "@theia/mini-browser": "0.7.1",
     "@theia/monaco": "0.7.1",
     "@theia/navigator": "0.7.1",
+    "@theia/outline-view": "0.7.1",
     "@theia/preferences": "0.7.1",
     "@theia/process": "0.7.1",
-    "@theia/outline-view": "0.7.1",
     "@theia/terminal": "0.7.1",
     "@theia/textmate-grammars": "0.7.1",
     "@theia/typescript": "0.7.1",
     "@theia/workspace": "0.7.1",
-    "@glsp-examples/workflow-modelserver-theia": "next",
-    "coffee-editor-extension": "1.0.0",
-    "coffee-workflow-analyzer": "1.0.0",
-    "coffee-workflow-analyzer-editors": "1.0.0",
-    "coffee-java-extension": "1.0.0",
-    "coffee-server": "1.0.0"
+    "coffee-editor-extension": "^1.0.0",
+    "coffee-java-extension": "^1.0.0",
+    "coffee-server": "^1.0.0",
+    "coffee-workflow-analyzer": "^1.0.0",
+    "coffee-workflow-analyzer-editors": "^1.0.0"
   },
   "devDependencies": {
     "@theia/cli": "0.7.1"
