--- a/web/coffee-workflow-analyzer-editors/package.json
+++ b/web/coffee-workflow-analyzer-editors/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "rimraf": "latest",
-    "typescript": "latest",
-    "tslint": "^5.5.0"
+    "tslint": "^5.5.0",
+    "typescript": "latest"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
