--- a/web/coffee-workflow-analyzer/package.json
+++ b/web/coffee-workflow-analyzer/package.json
@@ -10,14 +10,14 @@
   ],
   "dependencies": {
     "@theia/core": "0.7.1",
-    "@theia/mini-browser": "0.7.1",
     "@theia/editor": "0.7.1",
+    "@theia/mini-browser": "0.7.1",
     "@theia/process": "0.7.1",
+    "coffee-workflow-analyzer-editors": "^1.0.0",
     "express": "4.17.1",
     "glob": "7.1.4",
     "vscode-jsonrpc": "4.0.0",
-    "vscode-ws-jsonrpc": "0.1.0",
-    "coffee-workflow-analyzer-editors": "1.0.0"
+    "vscode-ws-jsonrpc": "0.1.0"
   },
   "devDependencies": {
     "rimraf": "latest",
