--- a/web/electron-app/package.json
+++ b/web/electron-app/package.json
@@ -43,9 +43,9 @@
   },
   "devDependencies": {
     "@theia/cli": "latest",
-    "electron": "9.0.2",
-    "electron-builder": "^22.7.0",
     "bufferutil": "4",
+    "electron": "^9.0.2",
+    "electron-builder": "^19.30.2",
     "utf-8-validate": "5"
   },
   "author": {
@@ -55,19 +55,24 @@
   },
   "repository": "https://github.com/vhemery/coffee-editor",
   "main": "scripts/DISCO-main.js",
+  "engines": {
+    "node": ">=10.2.0"
+  },
   "scripts": {
-    "prepare": "theia build --mode development",
-    "start": "theia start --WORKFLOW_NOTATION_LSP=5008 --WF_LSP=5017 --port=3000 --loglevel=debug --root-dir=../../backend/examples/ --loglevel=debug  --plugins=local-dir:./plugins",
-    "watch": "theia build --watch --mode development",
-    "package": "electron-builder",
-    "package:preview": "electron-builder --dir",
-    "download:plugins": "theia download:plugins"
+    "build": "theia build",
+    "package": "yarn run build && electron-builder",
+    "package:all": "yarn run build && electron-builder -lmw"
   },
   "theia": {
     "target": "electron",
     "backend": {
       "config": {
         "startupTimeout": -1
+      },
+      "frontend": {
+        "config": {
+          "applicationName": "DISCO"
+        }
       }
     }
   },
