--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 branches:
-        only:
-        - master
+  only:
+    - master
 matrix:
   include:
     - sudo: required
@@ -15,13 +15,13 @@ matrix:
         apt:
           update: true
           sources:
-          - ubuntu-toolchain-r-test
+            - ubuntu-toolchain-r-test
           packages:
-          - libxkbfile-dev
+            - libxkbfile-dev
           chrome: stable
-      before_cache:
-        # Runs before the cache is updated, after successful CI
-        - rm -rf node_modules/electron
+      #before_cache:
+      # Runs before the cache is updated, after successful CI
+      #  - rm -rf node_modules/electron
       env:
         global:
           - NODE_OPTIONS="--max_old_space_size=4096"
@@ -31,14 +31,14 @@ matrix:
         - cd web/ && travis_wait yarn --network-concurrency 1
     - language: java
       dist: trusty
-      jdk:  openjdk11
+      jdk: openjdk11
       cache:
         directories:
           - "$HOME/.m2/repository"
-      env:  
-        global:  
+      env:
+        global:
           - DISPLAY=:99.0
       before_install:
         - sh -e /etc/init.d/xvfb start - sleep 10
       script:
-        - cd backend/releng/com.eclipsesource.coffee.parent && mvn clean verify -U 
+        - cd backend/releng/com.eclipsesource.coffee.parent && mvn clean verify -U
