--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,5 +3,5 @@ image:
 
 tasks:
   - before: npm install -g yarn
-    init: ./run.sh
+    init: ./run.sh -b -c -ff
     command: cd web/electron-app && yarn rebuild:electron
