--- a/web/electron-app/package.json
+++ b/web/electron-app/package.json
@@ -59,10 +59,13 @@
     "node": ">=10.2.0"
   },
   "scripts": {
-    "build": "theia build",
+    "prepare": "theia build --mode development",
+    "start": "theia start --WORKFLOW_NOTATION_LSP=5008 --WF_LSP=5017 --port=3000 --loglevel=debug --root-dir=../../backend/examples/ --loglevel=debug  --plugins=local-dir:./plugins",
+    "watch": "theia build --watch --mode development",
+    "download:plugins": "theia download:plugins",
     "rebuild:electron": "theia rebuild:electron",
-    "package": "yarn run build && electron-builder",
-    "package:all": "yarn run build && electron-builder -lmw"
+    "package": "yarn run prepare && electron-builder --win",
+    "package:all": "yarn run prepare && electron-builder -lmw"
   },
   "theia": {
     "target": "electron"
