--- a/web/electron/package.json
+++ b/web/electron/package.json
@@ -1,60 +1,83 @@
 {
   "private": true,
-  "name": "browser-app",
-  "version": "0.7.0",
+  "name": "electron",
+  "productName": "DISCO",
+  "description": "Electron app for DISCO",
+  "version": "1.2.0",
+  "author": {
+    "name": "Vincent HEMERY",
+    "email": "vincent.hemery@csgroup.eu",
+    "url": "https://accounts.eclipse.org/users/vhemery"
+  },
+  "repository": "https://github.com/vhemery/coffee-editor",
+  "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
+  "main": "DISCO-main.js",
+  "theia": {
+    "target": "electron",
+    "frontend": {
+      "config": {
+        "applicationName": "DISCO"
+      }
+    }
+  },
   "dependencies": {
-    "@theia/callhierarchy": "latest",
-    "@theia/console": "latest",
-    "@theia/core": "latest",
-    "@theia/debug": "latest",
-    "@theia/editor": "latest",
-    "@theia/electron": "1.2.0",
-    "@theia/file-search": "latest",
-    "@theia/filesystem": "latest",
-    "@theia/json": "latest",
-    "@theia/keymaps": "latest",
-    "@theia/languages": "latest",
-    "@theia/markers": "latest",
-    "@theia/messages": "latest",
-    "@theia/mini-browser": "latest",
-    "@theia/monaco": "latest",
-    "@theia/navigator": "latest",
-    "@theia/outline-view": "latest",
-    "@theia/output": "latest",
-    "@theia/plugin-dev": "latest",
-    "@theia/plugin-ext": "latest",
-    "@theia/plugin-ext-vscode": "latest",
-    "@theia/plugin-metrics": "latest",
-    "@theia/preferences": "latest",
-    "@theia/process": "latest",
-    "@theia/search-in-workspace": "latest",
-    "@theia/terminal": "latest",
-    "@theia/typehierarchy": "latest",
-    "@theia/userstorage": "latest",
-    "@theia/variable-resolver": "latest",
-    "@theia/workspace": "latest",
+    "@theia/callhierarchy": "^1.2.0",
+    "@theia/console": "^1.2.0",
+    "@theia/core": "^1.2.0",
+    "@theia/debug": "^1.2.0",
+    "@theia/editor": "^1.2.0",
+    "@theia/electron": "^1.2.0",
+    "@theia/file-search": "^1.2.0",
+    "@theia/filesystem": "^1.2.0",
+    "@theia/json": "^1.2.0",
+    "@theia/keymaps": "^1.2.0",
+    "@theia/languages": "^1.2.0",
+    "@theia/markers": "^1.2.0",
+    "@theia/messages": "^1.2.0",
+    "@theia/mini-browser": "^1.2.0",
+    "@theia/monaco": "^1.2.0",
+    "@theia/navigator": "^1.2.0",
+    "@theia/outline-view": "^1.2.0",
+    "@theia/output": "^1.2.0",
+    "@theia/plugin-dev": "^1.2.0",
+    "@theia/plugin-ext": "^1.2.0",
+    "@theia/plugin-ext-vscode": "^1.2.0",
+    "@theia/preferences": "^1.2.0",
+    "@theia/process": "^1.2.0",
+    "@theia/search-in-workspace": "^1.2.0",
+    "@theia/terminal": "^1.2.0",
+    "@theia/typehierarchy": "^1.2.0",
+    "@theia/userstorage": "^1.2.0",
+    "@theia/variable-resolver": "^1.2.0",
+    "@theia/workspace": "^1.2.0",
     "coffee-editor-extension": "0.7.0",
     "coffee-java-extension": "0.7.0",
     "coffee-server": "0.7.0",
     "coffee-welcome-page": "0.7.0",
-    "coffee-workflow-analyzer": "0.7.0",
-    "coffee-workflow-analyzer-editors": "0.7.0",
-    "coffee-workflow-glsp-editor": "0.7.0"
-  },
-  "devDependencies": {
-    "@theia/cli": "latest"
+    "fs-extra": "^9.0.1",
+    "sharp": "^0.25.3",
+    "vscode-jsonrpc": "^5.0.1"
   },
   "scripts": {
+    "lint": "theiaext lint",
+    "clean": "theia clean",
+    "build": "theiaext compile && yarn bundle",
+    "rebuild:electron": "theia rebuild:electron",
     "prepare": "theia build --mode development",
-    "rebuild:browser": "theia rebuild:browser",
-    "start": "theia start --WORKFLOW_NOTATION_LSP=5008 --WF_LSP=5017 --port=3000 --loglevel=debug --root-dir=../../backend/examples/ --loglevel=debug  --plugins=local-dir:./plugins",
-    "watch": "theia build --watch --mode development",
-    "download:plugins": "theia download:plugins"
+    "bundle": "theia build --mode development",
+    "watch": "concurrently -n compile,bundle \"theiaext watch --preserveWatchOutput\" \"theia build --watch --mode development\"",
+    "start": "yarn rebuild:electron && theia start --WORKFLOW_NOTATION_LSP=5008 --WF_LSP=5017 --hostname 0.0.0.0 --loglevel=debug --root-dir=../../backend/examples/ --plugins=local-dir:./plugins",
+    "start:debug": "yarn start --log-level=debug",
+    "test": "electron-mocha --timeout 60000 \"./lib/test/**/*.espec.js\"",
+    "package": "electron-builder",
+    "postinstall": "electron-builder install-app-deps"
   },
-  "theia": {
-    "target": "browser"
+  "devDependencies": {
+    "@theia/cli": "^1.2.0",
+    "electron": "^4.2.11",
+    "electron-builder": "^22.7.0",
+    "electron-rebuild": "^1.11.0"
   },
-  "main": "src-gen/frontend/electron-main.js",
   "theiaPluginsDir": "plugins",
   "theiaPlugins": {
     "vscode-builtin-configuration-editing": "https://github.com/theia-ide/vscode-builtin-extensions/releases/download/v1.39.1-prel/configuration-editing-1.39.1-prel.vsix",
