--- a/backend/examples/SuperBrewer3000/.theia/settings.json
+++ b/backend/examples/SuperBrewer3000/.theia/settings.json
@@ -3,6 +3,8 @@
       "**/.classpath": true,
       "**/.project": true,
       "**/.settings": true,
-      "**/.factorypath": true
-   }
+      "**/.factorypath": true,
+      "**/.theia": true
+   },
+   "workbench.colorTheme": "light"
 }
